--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -115,7 +115,7 @@
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-7">
                         Locally owned and operated, Barrett Insurance continues to serve our community since 2001.
                     </p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-primary display-4" href="contact.html">&nbsp; &nbsp; &nbsp; &nbsp; Contact Us &nbsp; &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-md btn-white-outline display-4" href="page17.html">Request a Proposal</a></div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-primary display-4" href="contact.html">&nbsp; &nbsp; &nbsp; &nbsp; Contact Us &nbsp; &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-md btn-white-outline display-4" href="proposal.html">Request a Proposal</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
@@ -323,7 +323,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DPJyQ9XwJjyQ8hlkt1xXFl71pu3OaEyTb7zwo/cYh7kTX+RgktREoeIGmXqV5N2gPvKLJbEiQ2nBWxMKijPJ77UgEiXS0JqyMqJNabnNNxy1RBImq85K/WkN2kww9+/U">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pBYFJpyQF1tGDKyjQBQ032xCWWH+dozNqR6p746V/BMGw77V/w3lAl5F5Ms3ZjAT/O75F2h7Ko/37IyHCquneaxXVqDIl5UVu2Pwub+mAQ02veC3DYb7T7daFX/a6Drz">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
