--- a/cyndi.html
+++ b/cyndi.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KXIzmRUnWuv5VGw+85gUEuaE9NX2uctywEYlBvhDCDqddaMbisJDbje2TWoet67E6Jd0Q1KEajvbhXmbO5xU2a4pSqEmQvmHgCVm8seQmYM8l1aZV/NOk7NsFJx89kT+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eA0fYni32YuWvXT4nPd4W1jN79RlM3SnTFigWX1MNo8AB1GXZ9xO8w5O1cPRT6H1yNHU0AXQeKlcQe4d0YBRoaymcdG7H/scW2jaBGFx1P9ktKqok1P13I9DF0Uq+Y1H">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
