--- a/doug.html
+++ b/doug.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -157,7 +157,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BpmTIZ1/HAIBkqiex1nGPgNl3g0VJTCz+W3wSFepT1qpiwY5ff5Em3HWED/xWrCAq7+OmsisUlM1CB666EuRcsNULVqsdfNmQ7OZ9e1sWfbHxv6tpmHKFpnh87qaM8mp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rvRmz1/BzKnmhEdih6x3A74OomVE6fmGhHGUWKi6MEDj4DyAxmoK2YiUTBb0defK5BK46xoXTYF2AzU2Icmikbgvz1ONi4yFLgSVdPyombhmVdhHdHHPI08KFdueoiRZ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
